# AuthRoute

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.yaml
crates/api/: Cargo.toml
crates/api/src/: authpolicy.rs  hostname.rs  lib.rs  subject.rs  validate.rs  validate_cel.rs  validate_regex.rs
crates/authroute/: Cargo.toml
crates/authroute/src/: check.rs  config.rs  decision.rs  main.rs  policy.rs  session.rs
crates/controller/: Cargo.toml
crates/controller/src/: config.rs  lib.rs  main.rs
crates/telemetry/: Cargo.toml
crates/webhook/: Cargo.toml
crates/webhook/src/: config.rs  lib.rs  main.rs  tls.rs  validate.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
deploy/crds/: authroute.dev_authpolicies.yaml
deploy/dev/: policies.example.yaml
deploy/rbac/: controller.yaml
deploy/webhook/: webhook.yaml
docs/adr/: 0000-record-architecture-decisions.md  0001-authroute-a-kubernetes-native-auth-gateway.md  0002-per-route-authorization-crd.md  0003-identity-via-oidc-oauth.md  0004-envoy-gateway-integration-mechanism.md  0005-session-storage.md  0006-policy-expressed-in-cel.md  0006-validating-authpolicy.md  0007-layered-workspace-and-manifest-codegen.md  0008-self-managed-webhook-tls.md  README.md  template.md
docs/research/: README.md  authelia.md  cel-policy.md  envoy-gateway.md  ext-authz-contract.md  gateway-api.md  kopiur.md
src/: main.rs
