[package]
name = "authroute-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true
schemars.workspace = true

serde.workspace = true
serde_json.workspace = true

cel.workspace = true
regex.workspace = true

thiserror.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[features]
# k8s-openapi requires exactly one version feature selected by the final artifact.
# For this library's own builds/tests we pick a recent one; downstream binaries re-select.
default = ["k8s-openapi/v1_34"]