[package]
name = "authroute-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
authroute-api = { workspace = true }
kube = { workspace = true, features = ["client", "admission", "rustls-tls"] }
k8s-openapi = { workspace = true, features = ["v1_34"] }
schemars = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
json-patch = { workspace = true }

tokio = { workspace = true }
tower = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
base64 = "0.22"
http-body-util = "0.1"

[features]
integration = []